menu mobile spacing correction

--- a/css/_header.css
+++ b/css/_header.css
@@ -135,13 +135,13 @@
     ul.main_menu > li > a.active::after{color: var(--copperplate-color); content: "\f00d";}
     ul.main_menu > li > a.active{box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.04);}
     ul.main_menu > li > a:hover{color: var(--copperplate-color);}
-    ul.main_menu > li > ul{display: none; margin: 0; padding: 14px 31px;}
-    ul.main_menu > li > ul > li{margin-bottom: 0;}
-    ul.main_menu > li > ul > li > a{font-size: 20px; line-height: 32px; color: var(--text-color); display: block;}
-    ul.main_menu > li > ul > li > a::after{width: 36px; height: 2px; content: ""; background-color: var(--btn-color); display: block;}
+    ul.main_menu > li > ul{display: none; margin: 0; padding: 6px 31px 14px; background: #f8f4f2;}
+    ul.main_menu > li > ul > li{margin-bottom: 17px;}
+    ul.main_menu > li > ul > li > a{font-size: 20px; line-height: 32px; color: var(--text-color); display: block; font-family: 'Lora', serif;}
+    ul.main_menu > li > ul > li > a::after{width: 36px; height: 2px; content: ""; background-color: var(--btn-color); display: block; margin: 6px 0;}
     ul.main_menu > li > ul > li > ul{margin: 0; display: block;}
     ul.main_menu > li > ul > li > ul > li{margin: 0;}
-    ul.main_menu > li > ul > li > ul > li > a{font-size: 16px; line-height: 40px; font-weight: 500; color: var(--text-color); display: block; position: relative;}
+    ul.main_menu > li > ul > li > ul > li > a{font-size: 16px; line-height: 31px; font-weight: 500; color: var(--text-color); display: block; position: relative;}
     ul.main_menu > li > ul > li > ul > li.menu-item-has-children > a::after{right: 0px; top: 50%;transform: translateY(-50%); content: "\f105"; font-family: "Font Awesome 6 Pro"; position: absolute;}
     ul.main_menu > li > ul > li > ul > li > ul{margin: 0; padding: 10px; display: none;}
     ul.main_menu > li > ul > li > ul > li > ul > li{margin: 0;}
